cronjob for reminder &dms for reminder
