# docs/swagger.json
@@ -7,146 +7,6 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/v1/reminder": {
-            "post": {
-                "description": "Create a reminder",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "reminder"
-                ],
-                "summary": "Create a reminder",
-                "parameters": [
-                    {
-                        "description": "Reminder",
-                        "name": "reminder",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.TwReminder"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.TwReminder"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/reminder/schedule/{schedule_id}": {
-            "get": {
-                "description": "Get reminders by schedule ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "reminder"
-                ],
-                "summary": "Get reminders by schedule ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Schedule ID",
-                        "name": "schedule_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.TwReminder"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/reminder/{reminder_id}": {
-            "get": {
-                "description": "Get reminder by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "reminder"
-                ],
-                "summary": "Get reminder by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Reminder ID",
-                        "name": "reminder_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.TwReminder"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update a reminder",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "reminder"
-                ],
-                "summary": "Update a reminder",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Reminder ID",
-                        "name": "reminder_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Reminder",
-                        "name": "reminder",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.TwReminder"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.TwReminder"
-                        }
-                    }
-                }
-            }
-        },
         "/dbms/v1/board_columns": {
             "post": {
                 "description": "Create board column",
@@ -912,6 +772,232 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/dbms/v1/reminder": {
+            "get": {
+                "description": "Get all reminders",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reminder"
+                ],
+                "summary": "Get all reminders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.TwReminder"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a reminder",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reminder"
+                ],
+                "summary": "Create a reminder",
+                "parameters": [
+                    {
+                        "description": "Reminder",
+                        "name": "reminder",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.TwReminder"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.TwReminder"
+                        }
+                    }
+                }
+            }
+        },
+        "/dbms/v1/reminder/schedule/{schedule_id}": {
+            "get": {
+                "description": "Get reminders by schedule ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reminder"
+                ],
+                "summary": "Get reminders by schedule ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Schedule ID",
+                        "name": "schedule_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.TwReminder"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/dbms/v1/reminder/{reminder_id}": {
+            "get": {
+                "description": "Get reminder by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reminder"
+                ],
+                "summary": "Get reminder by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Reminder ID",
+                        "name": "reminder_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.TwReminder"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a reminder",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reminder"
+                ],
+                "summary": "Update a reminder",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Reminder ID",
+                        "name": "reminder_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Reminder",
+                        "name": "reminder",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.TwReminder"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.TwReminder"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a reminder",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reminder"
+                ],
+                "summary": "Delete a reminder",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Reminder ID",
+                        "name": "reminder_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.TwReminder"
+                        }
+                    }
+                }
+            }
+        },
+        "/dbms/v1/reminder/{reminder_id}/is_sent": {
+            "put": {
+                "description": "Complete a reminder",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reminder"
+                ],
+                "summary": "Complete a reminder",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Reminder ID",
+                        "name": "reminder_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.TwReminder"
+                        }
                     }
                 }
             }
